--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Update known_hosts
+        run: |
+            ssh-keyscan -H ${{ secrets.HOST }} || echo "SSH keyscan failed"
+            cat ~/.ssh/known_hosts
       
       - name: Set up SSH key
         run: |
